# ML-Algorithms

./: README.md  pyproject.toml  requirements_models.txt  requirements_tests.txt  template.py
src/ml_algorithms/: kmeans.py
tests/: test_kmeans.py
